yaml/passthrough-blackhole/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idgen
spec:
  selector:
    matchLabels:
      app: idgen
  replicas: 1
  template:
    metadata:
      labels:
        app: idgen
    spec:
      terminationGracePeriodSeconds: 5
      restartPolicy: Always
      containers:
      - name: main
        image: gcr.io/megandemo/idgen:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: idgen
spec:
  type: ClusterIP
  selector:
    app: idgen
  ports:
  - name: http
    port: 80
    targetPort: 8080
