yaml/passthrough-blackhole/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: idgen-ingress
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - route:
    - destination:
        host: idgen
        port:
          number: 80
